chore: some chages in media
