# src/controllers/media/Media.controller.ts
@@ -63,21 +63,12 @@ class MediaController extends Controller {
 
     //
     switch (mediaType) {
-      case MediaType.PROFILE_IMAGE:
-        acceptedExtensions = ['.jpeg', '.jpg', '.png'];
-        fileSize = 1024 * 1024 * 1; // 1MB
-        break;
-
       case MediaType.BUSINESS_LOGO:
         acceptedExtensions = ['.jpeg', '.jpg', '.png'];
         fileSize = 1024 * 1024 * 1; // 1MB
         break;
 
-      case MediaType.RENTAL_IMAGE:
-        acceptedExtensions = ['.jpeg', '.jpg', '.png'];
-        fileSize = 1024 * 1024 * 2; // 2MB
-        break;
-      case MediaType.VERIFICATION_ID:
+      case MediaType.OWNER_IDENTIFICATION_DOCUMENT:
         acceptedExtensions = ['.jpeg', '.jpg', '.png'];
         fileSize = 1024 * 1024 * 2; // 2MB
         break;
